# 309TEN009-BE

./: .env.example  .gitignore  local.docker-compose.yml  prod.docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CD.yml  CI.yml
config/: root_urls.py  settings.py
docker/: local.Dockerfile  prod.Dockerfile
euss_ya/common/: apps.py
euss_ya/core/: apps.py
euss_ya/exercises/: apps.py
euss_ya/users/: apps.py
euss_ya_apps/common/: apps.py
euss_ya_apps/exercises/: apps.py  urls.py
euss_ya_apps/users/: apps.py
